# openapi-doc-generator

./: .automation-scope.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_BACKLOG_IMPLEMENTATION_REPORT.md  AUTONOMOUS_DEVELOPMENT_REPORT.md  AUTONOMOUS_DEVELOPMENT_SESSION_REPORT.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_QUANTUM_IMPLEMENTATION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETE_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_ENHANCEMENT_REPORT_v6.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v4.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v5.md  AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT_v6.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_REPORT_v7.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_QUANTUM_IMPLEMENTATION_FINAL_REPORT.md  AUTONOMOUS_SESSION_AST_CACHING_REPORT.md  AUTONOMOUS_SESSION_DOCKER_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SESSION_JSON_LOGGING_REPORT.md  AUTONOMOUS_SESSION_REFACTORING_REPORT.md  AUTONOMOUS_SESSION_REPORT.md  AUTONOMOUS_SESSION_ROUTE_PERFORMANCE_METRICS_REPORT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  (+57 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
.terragon/: autonomous-executor.py  backlog-discovery.py  config.yaml  continuous-execution.sh  discovered-items.json  metrics-dashboard.py  value-metrics.json
deployment/: autonomous-production-deployment.yml  docker-compose.autonomous.yml
deployment/scripts/: entrypoint.sh  healthcheck.sh  prestart.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 001-plugin-architecture.md  002-ast-based-discovery.md  003-performance-monitoring.md  004-container-security.md  README.md
docs/automation/: AUTONOMOUS_SDLC_GUIDE.md  dependency-management.md  dependency-update-setuptools.md
docs/compliance/: COMPLIANCE_FRAMEWORK.md  SLSA_COMPLIANCE.md
docs/deployment/: BUILD_GUIDE.md  CONTAINER_SECURITY.md
docs/guides/: DEVELOPMENT_GUIDE.md  USER_GUIDE.md
docs/monitoring/: ALERTING_RUNBOOK.md  METRICS_DASHBOARD.md  OBSERVABILITY_FRAMEWORK.md  TELEMETRY_IMPLEMENTATION.md  production-monitoring.md
docs/operational-excellence/: TECHNICAL_DEBT_ANALYSIS.md  disaster-recovery.md  performance-optimization.md
docs/runbooks/: TROUBLESHOOTING.md
docs/security/: SECURITY_GUIDELINES.md
docs/status/: 2025-07-26.json  2025-07-26.md  2025-07-27.json  2025-07-27.md  autonomous_final_report.md  autonomous_session_2025-07-27.json  autonomous_session_2025_07_26.json  autonomous_session_final.json  autonomous_session_final_report.md  autonomous_session_phase2_report.md  autonomous_session_report.md  autonomous_session_status.json
docs/testing/: TESTING_PATTERNS.md
docs/workflows/: GITHUB_ACTIONS_SETUP.md  MANUAL_WORKFLOW_SETUP.md  README.md  RELEASE_AUTOMATION.md  ci-advanced-template.yml  production-deploy.yml  release-automation-template.yml  security-advanced-template.yml
examples/: app.py  simple_app.py  tornado_app.py
openapi_gen/: __init__.py  cli.py  generator.py  parser.py
scripts/: automate_maintenance.py  collect_metrics.py  compliance_check.py  dev.py  generate_sbom.py  security_scan.py  update_version.py
src/openapi_doc_generator/: __init__.py  actionable_errors.py  advanced_caching.py  advanced_concurrent_processor.py  advanced_memory_optimizer.py  advanced_performance_analytics.py  advanced_security_guardian.py  ai_documentation_agent.py  auto_scaler.py  autonomous_code_analyzer.py  autonomous_reliability_engine.py  circuit_breaker.py  cli.py  config.py  discovery.py  documentator.py  enhanced_error_handling.py  enhanced_monitoring.py  enhanced_validation.py  github_hygiene.py  global_distribution_optimizer.py  graceful_degradation.py  graphql.py  health_check.py  health_server.py  i18n.py  intelligent_load_balancer.py  logging_config.py  markdown.py  migration.py  ml_schema_inference.py  monitoring.py  parallel_processor.py  performance_optimizer.py  playground.py  predictive_auto_scaler.py  quantum_api.py  quantum_audit_logger.py  quantum_biology_evolution.py  quantum_compliance.py  (+36 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_abstract_method_pass_coverage.py  test_add_pytest_config.py  test_aiohttp_plugin.py  test_ast_caching.py  test_autonomous_components_simple.py  test_autonomous_sdlc_components.py  test_cli_comprehensive_coverage.py  test_cli_coverage.py  test_cli_error_coverage.py  test_cli_invalid_old_spec.py  test_cli_migration_guide.py  test_cli_output_formats.py  test_cli_refactoring.py  test_cli_security.py  test_cli_spec_info.py  test_cli_test_generation.py  test_cli_ux_enhancements.py  test_cli_validation.py  test_cli_version_flag.py  test_declare_pytest_dependency.py  test_discovery_abstract_methods_coverage.py  test_discovery_coverage.py  test_discovery_edge_cases.py  test_discovery_refactoring.py  test_django_route_discovery.py  test_docker_integration.py  test_document_test_run.py  test_documentator_error_coverage.py  test_draft-markdown-templates-for-api-docs.py  test_enhanced_modules.py  test_expose-generate-markdown-method-on-documentationresult.py  test_express_route_discovery.py  test_flask_route_discovery.py  test_foundational.py  test_framework_detection_refactoring.py  test_generator.py  test_github_hygiene.py  test_graphql_error_coverage.py  (+33 more)
tests/contract/: test_api_contracts.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: __init__.py  sample_apps.py  sample_openapi_specs.py  test_data.py
tests/integration/: __init__.py  test_end_to_end_workflows.py
tests/performance/: __init__.py  (+2 more)
(+11 files in other folders)
