[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi_doc_generator"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.1",
    "graphql-core>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "bandit",
    "coverage",
    "radon",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "openapi_doc_generator",
    "openapi_doc_generator.templates",
    "openapi_doc_generator.plugins",
]

[project.entry-points."openapi_doc_generator.plugins"]
aiohttp = "openapi_doc_generator.plugins.aiohttp:AioHTTPPlugin"
starlette = "openapi_doc_generator.plugins.starlette:StarlettePlugin"
tornado = "openapi_doc_generator.plugins.tornado:TornadoPlugin"

[project.scripts]
"openapi-doc-generator" = "openapi_doc_generator.cli:main"

[tool.setuptools.package-data]
"openapi_doc_generator.templates" = ["*.jinja"]
